# Dino-game

./: CMakeLists.txt  README.md  main.cpp
Engine/Core/: application.cpp  application.h  global.cpp  global.h  input.cpp  input.h  node.cpp  node.h  rid.h  scene.cpp  scene.h  time_utils.cpp  time_utils.h
Engine/Core/Camera/: camera.cpp  camera.h  camera2d.cpp  camera2d.h
Engine/Core/Mesh/: material.h  mesh.h  mesh2d.h
Engine/Core/Resources/: image.cpp  image.h  resource_manager.cpp  resource_manager.h
Engine/Core/UI/: button.h  canvas.cpp  canvas.h
Engine/Math/: AABB.h  basis.cpp  basis.h  basis2d.cpp  basis2d.h  rect.h  transform.cpp  transform.h  transform2d.cpp  transform2d.h
Engine/Platform/: window.cpp  window.h
Engine/openGL/: gpu.cpp  gpu.h  utils.h
Engine/openGL/Buffers/: index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h  vertex_attribs.cpp  vertex_attribs.h  vertex_buffer.cpp  vertex_buffer.h
Engine/openGL/Framebuffer/: framebuffer.cpp  framebuffer.h
Engine/openGL/Program/: program.cpp  program.h  shader.cpp  shader.h
Engine/openGL/Program/Shaders/: basic.frag  basic.vert  skybox.frag  skybox.vert
Engine/openGL/Program/Shaders/2d/: basic.frag  basic.vert  colored.frag  colored.vert  text.frag
Engine/openGL/Renderer/: renderer.cpp  renderer.h  text_renderer.cpp  text_renderer.h
Engine/openGL/Texture/: cubemap.cpp  cubemap.h  sampler.h  texture.cpp  texture.h
dino/: bg.h  dino.h  enemy.h  game.h  ground.h  my_shader.cpp  my_shader.h  physics.cpp  physics.h
dino/resource/: alpha.frag
(+2 files in other folders)
